[package]
name = "rsii"
version = "0.1.1"
edition = "2021"
authors = ["Jakub Kolcar <kolcarjakub@gmail.com>"]
description = "RSII - Rust AI Command-line Assistant"
license = "MIT"
repository = "https://github.com/ioma8/rsii"
homepage = "https://github.com/ioma8/rsii"
documentation = "https://github.com/ioma8/rsii"
readme = "README.md"
keywords = ["AI", "OpenAI", "command-line", "assistant", "automation"]
categories = ["command-line-utilities", "command-line-interface"]

[package.metadata]
installation = """
To install rsii, run the following command:
```
cargo install rsii
```
"""

[dependencies]
toml = "0.9"
tokio = { version = "1", features = ["full"] }
openai-api-rs = "6"
serde_json = "1.0"
clipboard = "0.5.0"
dirs = "6.0.0"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }

[build-dependencies]
dirs = "6.0.0"
toml = "0.9"

[[bin]]
name = "rsii"
path = "src/main.rs"
